--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     404
   </h1>
 
-    <a target="_blank" href="https://github.com/FlavianoMucedda" class="button"> Have a look over here! </a>
+    <a target="_blank" href="" class="button"> Have a look over here! </a>
 
 </body>
 </html>
