--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     404
   </h1>
 
-<<<<<<< HEAD
-    <a target="_blank" href="" class="button"> Have a look over here! </a>
-=======
-    <a target="_blank" href="pizza.jpg" class="button"> Have a look over here! </a>
->>>>>>> 10d23c368ade10fe3a9f9cf9942baa12fc65b5fa
+    <a target="_blank" href="https://github.com/FlavianoMucedda" class="button"> Have a look over here! </a>
+
 
 </body>
 </html>
